# clang-format-swig

./: .editorconfig  .gitignore  .goreleaser.yaml  .pre-commit-hooks.yaml  CONTRIBUTING.md  LICENSE  README.md  TODO.md  go.mod  main.go  main_test.go
.github/workflows/: ci.yml  release.yml
dotnet/: Program.cs  clang-format-swig.csproj
node/: package.json  run.js
node/scripts/: check-bundled.js
python/: hatch_build.py  pyproject.toml
python/src/clang_format_swig/: __main__.py
